[project]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "leonardo-gurdulich",email = "leonardo.gurdulich@halopowered.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain-google-genai (>=3.1.0,<4.0.0)",
    "langchain-tavily (>=0.2.13,<0.3.0)",
    "grandalf (>=0.8,<0.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
